# sast-readium

./: .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMAKE_BUILD_FIXES.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  TOOLBAR_FIXES_SUMMARY.md  WARP.md  build_clean.ps1  clang-tidy-full-analysis.txt  clang-tidy-results.txt  configure_vcpkg.ps1  fix_regex_validation.py  mkdocs.yml  run_tests.py  test_list.json  vcpkg.json  xmake.lua
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  app.qrc  ela_ui.qrc  main.cpp
app/accessibility/: AccessibilityManager.cpp  AccessibilityManager.h
app/adapters/: DocumentAdapter.cpp  DocumentAdapter.h  PageAdapter.cpp  PageAdapter.h  SearchAdapter.cpp  SearchAdapter.h  ViewAdapter.cpp  ViewAdapter.h
app/cache/: CacheEvents.h  CacheManager.cpp  CacheManager.h  CacheTypes.h  PDFCacheManager.cpp  PDFCacheManager.h  PageTextCache.cpp  PageTextCache.h  SearchResultCache.cpp  SearchResultCache.h
app/command/: AccessibilityCommands.cpp  AccessibilityCommands.h  AnnotationCommands.cpp  AnnotationCommands.h  CommandInterface.h  CommandManager.cpp  CommandManager.h  DocumentCommands.cpp  DocumentCommands.h  HighlightCommands.cpp  HighlightCommands.h  InitializationCommand.cpp  InitializationCommand.h  NavigationCommands.cpp  NavigationCommands.h  PluginCommands.cpp  PluginCommands.h
app/controller/: AccessibilityController.cpp  AccessibilityController.h  AnnotationController.cpp  AnnotationController.h  ApplicationController.cpp  ApplicationController.h  CachePresenter.cpp  CachePresenter.h  ConfigurationManager.cpp  ConfigurationManager.h  DocumentController.cpp  DocumentController.h  EventBus.cpp  EventBus.h  PageController.cpp  PageController.h  ServiceLocator.cpp  ServiceLocator.h  StateManager.cpp  StateManager.h  tool.hpp
app/delegate/: AnnotationRenderDelegate.cpp  AnnotationRenderDelegate.h  PageNavigationDelegate.cpp  PageNavigationDelegate.h  PluginListDelegate.cpp  PluginListDelegate.h  ThumbnailDelegate.cpp  ThumbnailDelegate.h  ViewDelegate.cpp  ViewDelegate.h
app/factory/: CommandFactory.cpp  CommandFactory.h  CommandPrototypeRegistry.cpp  ModelFactory.cpp  ModelFactory.h  WidgetFactory.cpp  WidgetFactory.h
app/forms/: FormFieldManager.cpp  FormFieldManager.h
app/i18n/: accessibility_en.ts  accessibility_zh.ts  annotation_system_en.ts  annotation_system_zh.ts  app_en.ts  app_zh.ts  command_line_en.ts  command_line_zh.ts  document_metadata_en.ts  document_metadata_zh.ts  plugin_system_en.ts  plugin_system_zh.ts
app/interaction/: AnnotationInteractionHandler.cpp  AnnotationInteractionHandler.h  MultiPageTextSelection.cpp  MultiPageTextSelection.h  TextSelectionManager.cpp  TextSelectionManager.h
app/logging/: CrashHandler.cpp  CrashHandler.h  CrashReporter.cpp  CrashReporter.h  Logger.cpp  Logger.h  LoggingConfig.cpp  LoggingConfig.h  LoggingMacros.cpp  LoggingMacros.h  LoggingManager.cpp  LoggingManager.h  QtSpdlogBridge.cpp  QtSpdlogBridge.h  README.md  SimpleLogging.cpp  SimpleLogging.h  StackTrace.cpp  StackTrace.h
app/managers/: FileTypeIconManager.cpp  FileTypeIconManager.h  HighlightManager.cpp  HighlightManager.h  I18nManager.cpp  I18nManager.h  KeyboardShortcutManager.cpp  KeyboardShortcutManager.h  OnboardingManager.cpp  OnboardingManager.h  RecentFilesManager.cpp  RecentFilesManager.h  StyleManager.cpp  StyleManager.h  SystemTrayManager.cpp  SystemTrayManager.h
app/model/: AccessibilityModel.cpp  AccessibilityModel.h  AnnotationModel.cpp  AnnotationModel.h  AsyncDocumentLoader.cpp  AsyncDocumentLoader.h  BookmarkModel.cpp  BookmarkModel.h  CacheConfigModel.cpp  CacheConfigModel.h  CacheDataModel.cpp  CacheDataModel.h  CacheEntryModel.cpp  CacheEntryModel.h  CacheStatsModel.cpp  CacheStatsModel.h  DocumentModel.cpp  DocumentModel.h  HighlightModel.cpp  HighlightModel.h  PDFOutlineModel.cpp  PDFOutlineModel.h  PageModel.cpp  PageModel.h  PluginConfigModel.cpp  PluginConfigModel.h  PluginModel.cpp  PluginModel.h  RenderModel.cpp  RenderModel.h  SearchModel.cpp  SearchModel.h  ThumbnailModel.cpp  ThumbnailModel.h
app/platform/: WindowsCompat.h
app/plugin/: IAnnotationPlugin.h  ICacheStrategyPlugin.h  IDocumentProcessorPlugin.h  IRenderPlugin.h  ISearchPlugin.h  PluginHookPoint.cpp  PluginHookPoint.h  PluginHookRegistry.cpp  PluginHookRegistry.h  PluginInterface.cpp  PluginInterface.h  PluginManager.cpp  PluginManager.h  SpecializedPlugins.h
app/search/: BackgroundProcessor.cpp  BackgroundProcessor.h  IncrementalSearchManager.cpp  IncrementalSearchManager.h  MemoryManager.cpp  MemoryManager.h  MultiSearchEngine.cpp  OptimizedSearchEngine.cpp  OptimizedSearchEngine.h  SearchConfiguration.cpp  SearchConfiguration.h  SearchEngine.cpp  SearchEngine.h  SearchErrorRecovery.cpp  SearchErrorRecovery.h  SearchExecutor.cpp  SearchExecutor.h  SearchFeatures.cpp  SearchFeatures.h  SearchFeaturesExtensions.cpp  SearchMetrics.cpp  SearchMetrics.h  SearchPerformance.cpp  SearchPerformance.h  SearchThreadSafety.cpp  SearchThreadSafety.h  SearchValidator.cpp  SearchValidator.h  TextExtractor.cpp  TextExtractor.h
app/security/: SignatureVerifier.cpp  SignatureVerifier.h
app/tools/: PageTools.cpp  PageTools.h
app/utils/: DocumentAnalyzer.cpp  DocumentAnalyzer.h  ErrorHandling.cpp  ErrorHandling.h  ErrorRecovery.cpp  ErrorRecovery.h  Logger.cpp  LoggingConfig.cpp  LoggingConfig.h  LoggingMacros.cpp  LoggingManager.h  PDFUtilities.cpp  PDFUtilities.h  ResourcesInit.cpp  ResourcesInit.h  SafePDFRenderer.cpp  SafePDFRenderer.h
app/view/: ICacheView.h
cmake/: README.md  (+10 more)
tests/: CMakeLists.txt  README.md  README_SEARCH_TESTS.md  TestUtilities.cpp  TestUtilities.h  rename_tests.py  run_search_tests.py  smoke_test.cpp  test_annotation_commands.cpp  test_annotation_controller.cpp  test_highlight_commands.cpp  test_highlight_model.cpp  test_plugin_commands.cpp  test_plugin_manager.cpp  test_qgraphics_pdf_test.cpp  test_smoke.cpp  windows_path_test.cpp
tests/accessibility/: test_accessibility_manager.cpp
(+678 files in other folders)
